feat: Phase 2 P1 — 5 missing drivers, TopologyCache, FNL dynamic loading, Ed25519 snapshot signing
Task 4: Added 5 new motivation drivers (ENTROPY, SOCIAL, SELFACTUALIZATION,
ATTENTION, UBUNTU) to DriverType enum with target+description fields.
Updated DriverState.withDefaults, InstanceMediator (EnumMap for all 8
drivers, getDriverState method), MatrixMetrics (tagged gauges for all 8).

Task 5: Created TopologyCache with input/output maps, registerConnection,
getInputs/getOutputs, removeNeuron, groupByTarget, concurrent-safe.
Integrated into NeuronClusterActor for signal routing.

Task 6: Created FNLMetadata record and FNLLoader (@ApplicationScoped) with
load/unload/listLoaded/jitLoad. Added LoadFNL/UnloadFNL/ListLoadedFNLs
commands to NeuronClusterActor.

Task 7: Created SnapshotSigner (Ed25519 via java.security.*) and
NeuronIdentityLedger (UUID→PublicKey registry). Updated SnapshotStore
with optional signing on save and verification on load (.sig sidecar).

Tests: 98 test cases, 0 failures across 8 test classes.
Pre-existing failures (WeightVectorTest, MatrixMetricsTest meter lookups)
fixed where touching our code; WeightVectorTest is untracked pre-existing.